Fixed spacing

--- a/style.css
+++ b/style.css
@@ -148,6 +148,33 @@ textarea:not([rows]) {
   border: 0 !important;
 }
 
+.container {
+  --max-width: 1110px;
+  --padding: 1rem;
+
+  width: min(var(--max-width), 100% - var(--padding) * 2);
+  margin-inline: auto;
+}
+
+/* same as .flow :not(:first-child) */
+/* same as .flow * + *  */
+:where(.flow :not(:first-child)){  
+  margin-top: var(--flow-spacer, 3em);
+}
+
+.even-columns {
+  display: grid;
+  gap: 1rem;
+}
+
+@media(min-width: 50em) {
+  .even-columns {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+    /* made comumns of same height*/
+  }
+}
+
 .text-primary-400 {
   color: var(--clr-accent-400);
 }
@@ -234,35 +261,21 @@ textarea:not([rows]) {
   padding-block: var(--size-700);
 }
 
-.container {
-  --max-width: 1110px;
-  --padding: 1rem;
-
-  width: min(var(--max-width), 100% - var(--padding) * 2);
-  margin-inline: auto;
-}
-
-.even-columns {
-  display: grid;
-  gap: 1rem;
-}
-
-@media(min-width: 50em) {
-  .even-columns {
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr;
-    /* made comumns of same height*/
-  }
-}
-
-
-
 /* General styling */
 
 body {
   font-size: var(--ff-body);
   font-family: var(--ff-body);
   color: var(--clr-primary-400);
+}
+
+p:not([class]){
+  opacity: 0.7;
+  max-width: 32ch;
+}
+
+p[data-width="wide"]{
+  max-width: 42ch;
 }
 
 .button {
